[package]
name = "wxclone"
version = "0.1.1"
description = "A small macOS utility for managing multiple WeChat clones."
authors = ["WxClone"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tauri = { version = "2", features = [] }
